# vilma_v2x

./: .gitignore  README.md
obu_gnss_filtering/: CMakeLists.txt  package.xml
obu_gnss_filtering/config/: ekf_map.params.yaml  ekf_odom.params.yaml  navsat.params.yaml  udp_driver_sender.param.yaml
obu_gnss_filtering/launch/: nmea_tcpclient_driver.launch.py  obu_gnss_filter.launch.py  socket_can_receiver.launch.py
obu_gnss_filtering/src/: gnss_imu_to_nmea_node.cpp
obu_localization_container/: Dockerfile  README.md
obu_localization_container/.devcontainer/: devcontainer.json
obu_localization_container/config/: cyclonedds.xml  obu.conf  xsens_mti_node.yaml
obu_localization_container/scripts/: build.sh  ros_entrypoint.sh  run.sh
vilma_hmi/: README.md  package.xml  setup.cfg  setup.py
vilma_hmi/config/: platooning.param.yaml  vilma_status.param.yaml
vilma_hmi/launch/: platooning_hmi.launch.py  vilma_status.launch.py
vilma_hmi/scripts/: config.json  index.html  platooning_hmi.html
vilma_hmi/website/: platooning_hmi.html  vilma_status.html
vilma_obu_can/: CMakeLists.txt  package.xml
vilma_obu_can/include/vilma_obu_can/: vilma_obu_can.hpp
vilma_obu_can/launch/: vilma_obu_can.launch.py
vilma_obu_can/scripts/: restart_launch.sh
vilma_obu_can/src/: vilma_obu_can.cpp  vilma_obu_can_node.cpp
vilma_platooning/: CMakeLists.txt  README.md  package.xml
vilma_platooning/config/: carla_objects.json
vilma_platooning/docs/: .$V2X_platooning.drawio.bkp  V2X_platooning.drawio  platooning_carla_topics.txt
vilma_platooning/include/vilma_platooning/: vilma_platooning.hpp  visibility_control.h
vilma_platooning/launch/: carla_aw_bridge.launch.py  vilma_platooning.launch.py
vilma_platooning/libraries/haversine/: haversine.cpp
vilma_platooning/scripts/: carla_leader_controller.py  simulate_cam.py  simulate_target.py
vilma_platooning/src/: vilma_platooning.cpp  vilma_platooning_node.cpp
vilma_platooning/utils/: reset_pose.sh  run_carla.sh  thirdview_camera.py
vilma_traffic_light/: CMakeLists.txt  package.xml
vilma_traffic_light/include/vilma_traffic_light/: traffic_light_structures.hpp  vilma_traffic_light_rx.hpp
vilma_traffic_light/launch/: vilma_traffic_light_rx.launch.xml
vilma_traffic_light/scripts/: publish_spatem_ts.py  utils.py
vilma_traffic_light/src/: vilma_traffic_light_rx.cpp
vilma_v2x/: CMakeLists.txt  package.xml
vilma_v2x/cohda/: README.md  rsu.conf
vilma_v2x/cohda/obu_conf/: obu_hil-1.conf  obu_hil-2.conf
vilma_v2x/config/: etsi_its_messages.param.yaml  udp_driver_receiver.param.yaml  udp_driver_sender.param.yaml
vilma_v2x/evaluation/: distances.csv  high_speed_data_v2x_rtk.csv  low_speed_data_v2x_rtk.csv  low_speed_data_v2x_rtk2.csv  obu_gnss_error.ipynb  out0.csv  out1.csv  out2.csv  plot_control.ipynb  plot_distance.ipynb
vilma_v2x/launch/: case_platooning.launch.py  hil_v2x_udp_bridge.launch.py  v2x_panel.launch.py  vilma_v2x_udp_bridge.launch.py
vilma_v2x/scripts/: cam_monitoring.py  cv2x_range.py  ego_cam.py  gps_error.py  hil_udp_lifecyclenode_transtions.sh  rsu_cam.py  tf_pub.py  udp_lifecyclenode_transtions.sh
xsens_obu_container/: Dockerfile  README.md  build.sh  open_vcan.sh  ros_entrypoint.sh  run.sh  xsens_obu_container.service
xsens_obu_container/src/obu_can_vstate/: CMakeLists.txt
xsens_obu_container/src/obu_can_vstate/include/obu_can_vstate/: obu_can_vstate.hpp
xsens_obu_container/src/obu_can_vstate/launch/: obu_can_vstate.launch.py
xsens_obu_container/src/obu_can_vstate/param/: xsens_mti_node.yaml
xsens_obu_container/src/obu_can_vstate/scripts/: restart_launch.sh
xsens_obu_container/src/obu_can_vstate/src/: obu_can_vstate.cpp  obu_can_vstate_node.cpp
xsens_obu_conteiner/: Dockerfile  ros_entrypoint.sh  run.sh
xsens_obu_conteiner/src/obu_can_vstate/: CMakeLists.txt  package.xml
xsens_obu_conteiner/src/obu_can_vstate/include/obu_can_vstate/: obu_can_vstate.hpp
xsens_obu_conteiner/src/obu_can_vstate/launch/: obu_can_vstate.launch.py
xsens_obu_conteiner/src/obu_can_vstate/scripts/: restart_launch.sh
xsens_obu_conteiner/src/obu_can_vstate/src/: obu_can_vstate.cpp  obu_can_vstate_node.cpp
