<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obu_gnss_filtering</name>
  <version>0.0.0</version>
  <description>Filters GNSS using IMU and CAN bus</description>
  <maintainer email="gabriel.rocha@ieee.org">Gabriel Toffanetto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_localization</depend>
  <depend>xsens_mti_ros2_driver</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>ros2_socketcan_msgs</depend>
  <depend>can_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
