<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vilma_traffic_light</name>
  <version>0.0.0</version>
  <description>SPATEM processing node.</description>
  <maintainer email="gabriel.rocha@ieee.org">Gabriel Toffanetto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vilma_v2x</depend>
  <depend>etsi_its_spatem_ts_msgs</depend>
  <depend>etsi_its_mapem_ts_msgs</depend>
  <depend>etsi_its_msgs_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
